optimizer/src/snapshots/spec_example_props_wrapping_children2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from '@qwik.dev/core';
export const Works = component$((props) => {
	let fromLocal = useSignal(0);
	return (
		<div>
		  before-
			{fromLocal}
			{props.fromProps}
			{fromLocal + props.fromProps}
			{{props: props.fromProps}}
			{{local: fromLocal}}
			{{props: props.fromProps, local: fromLocal}}
			-after
		</div>
	);
});

============================= test.js ==

import { useSignal } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	let fromLocal = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		"before-",
		fromLocal,
		props.fromProps,
		fromLocal + props.fromProps,
		{ props: props.fromProps },
		{ local: fromLocal },
		{
			props: props.fromProps,
			local: fromLocal
		},
		"-after"
	], 1, null);
}, "Works_component_t45qL4vNGv0"));


None
== DIAGNOSTICS ==

[]
