optimizer/src/snapshots/spec_example_qwik_conflict.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStyles } from '@qwik.dev/core';
import { qrl } from '@qwik.dev/core/what';

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log('not this', qrl());

componentQrl();
export const Foo = component$(() => {
	useStyles$('thing');
	const qwik = hW + handleWatch;
	console.log(qwik);
	const qrl = 23;
	return (
		<div onClick$={()=> console.log(qrl)}/>
	)
}, {
	tagName: "my-foo",
});

export const Root = component$(() => {
	useStyles($('thing'));
	return $(() => {
		return (
			<div/>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.tsx_Foo_component_useStyles_pV9TSCBIhw8.js (ENTRY POINT)==

export const Foo_component_useStyles_pV9TSCBIhw8 = "thing";


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useStyles_pV9TSCBIhw8",
  "entry": null,
  "displayName": "test.tsx_Foo_component_useStyles",
  "hash": "pV9TSCBIhw8",
  "canonicalFilename": "test.tsx_Foo_component_useStyles_pV9TSCBIhw8",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    283,
    290
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_IoDmt25HkZg = ()=>import("./test.tsx_Foo_component_div_on_click_IoDmt25HkZg");
const i_pV9TSCBIhw8 = ()=>import("./test.tsx_Foo_component_useStyles_pV9TSCBIhw8");
export const Foo_component_HTDRsvUbLiE = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_pV9TSCBIhw8, "Foo_component_useStyles_pV9TSCBIhw8"));
	const qwik = /*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_pV9TSCBIhw8, "Foo_component_useStyles_pV9TSCBIhw8"));
	console.log(qwik);
	const qrl = 23;
	return /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_IoDmt25HkZg, "Foo_component_div_on_click_IoDmt25HkZg", [qrl]) }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    263,
    418
  ]
}
*/
============================= test.tsx_Root_component_useStyles_u5DkUxGrGnU.js (ENTRY POINT)==

export const Root_component_useStyles_u5DkUxGrGnU = "thing";


None
/*
{
  "origin": "test.tsx",
  "name": "Root_component_useStyles_u5DkUxGrGnU",
  "entry": null,
  "displayName": "test.tsx_Root_component_useStyles",
  "hash": "u5DkUxGrGnU",
  "canonicalFilename": "test.tsx_Root_component_useStyles_u5DkUxGrGnU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    499,
    506
  ]
}
*/
============================= test.tsx_Root_component_royhjYaCbYE.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
import { useStyles } from "@qwik.dev/core";
const i_u5DkUxGrGnU = ()=>import("./test.tsx_Root_component_useStyles_u5DkUxGrGnU");
export const Root_component_royhjYaCbYE = ()=>{
	useStyles(/*#__PURE__*/ qrl(i_u5DkUxGrGnU, "Root_component_useStyles_u5DkUxGrGnU"));
	return /*#__PURE__*/ qrl(i_cBpQNYDUHI4, "Root_component_1_cBpQNYDUHI4");
};


None
/*
{
  "origin": "test.tsx",
  "name": "Root_component_royhjYaCbYE",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "royhjYaCbYE",
  "canonicalFilename": "test.tsx_Root_component_royhjYaCbYE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    478,
    559
  ]
}
*/
============================= test.tsx_Root_component_1_cBpQNYDUHI4.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const Root_component_1_cBpQNYDUHI4 = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Root_component_1_cBpQNYDUHI4",
  "entry": null,
  "displayName": "test.tsx_Root_component_1",
  "hash": "cBpQNYDUHI4",
  "canonicalFilename": "test.tsx_Root_component_1_cBpQNYDUHI4",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    520,
    555
  ]
}
*/
============================= test.tsx_Foo_component_div_on_click_IoDmt25HkZg.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Foo_component_div_on_click_IoDmt25HkZg = ()=>{
	const [qrl] = useLexicalScope();
	return console.log(qrl);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_click_IoDmt25HkZg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_click",
  "hash": "IoDmt25HkZg",
  "canonicalFilename": "test.tsx_Foo_component_div_on_click_IoDmt25HkZg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { qrl } from "@qwik.dev/core/what";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core/what";
const i_pV9TSCBIhw8 = ()=>import("./test.tsx_Foo_component_useStyles_pV9TSCBIhw8");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
const i_u5DkUxGrGnU = ()=>import("./test.tsx_Root_component_useStyles_u5DkUxGrGnU");
const i_cBpQNYDUHI4 = ()=>import("./test.tsx_Root_component_1_cBpQNYDUHI4");
const i_royhjYaCbYE = ()=>import("./test.tsx_Root_component_royhjYaCbYE");
export const hW = 12;
export const handleWatch = 42;
const componentQrl = ()=>console.log("not this", qrl());
componentQrl();
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));
export const Root = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_royhjYaCbYE, "Root_component_royhjYaCbYE"));


None
== DIAGNOSTICS ==

[]
