optimizer/src/snapshots/spec_example_reg_ctx_name_segments.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, server$ } from '@qwik.dev/core';
import { foo } from './foo';
export const Works = component$((props) => {
	const text = 'hola';
	return (
		<>
		<div onClick$={server$(() => console.log('in server', text))}></div>
		<div onClick$={() => foo()}></div>
		</>
	);
});

============================= test.js ==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useLexicalScope } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { foo } from "./foo";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	const text = "hola";
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ serverQrl(/*#__PURE__*/ inlinedQrl(()=>{
		const [text] = useLexicalScope();
		return console.log("in server", text);
	}, "Works_component_div_on_click_server_I0KQOua02KE", [text])) }, null, null, 3, null), /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ inlinedQrl(()=>foo(), "Works_component_div_on_click_1_4HCM8aai7mo") }, null, null, 3, null)], 3, null);
}, "Works_component_t45qL4vNGv0"));


None
== DIAGNOSTICS ==

[]
