optimizer/src/snapshots/spec_example_reg_ctx_name_segments_hoisted.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, server$, useStyle$ } from '@qwik.dev/core';

export const Works = component$((props) => {
	useStyle$(STYLES);
	const text = 'hola';
	return (
		<div onClick$={server$(() => console.log('in server', text))}></div>
	);
});

const STYLES = '.class {}';

============================= test.js ==

import { useStyleQrl } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { useStyleQrl } from "@qwik.dev/core";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	/*#__PURE__*/ useStyleQrl(/*#__PURE__*/ inlinedQrl(STYLES, "Works_component_useStyle_i40UL9JyQpg"));
	const text = "hola";
	return /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ serverQrl(/*#__PURE__*/ inlinedQrl(()=>{
		const [text] = useLexicalScope();
		return console.log("in server", text);
	}, "Works_component_div_onClick_server_OsNoEFc5SM4", [text])) }, null, null, 3, null);
}, "Works_component_t45qL4vNGv0"));
const STYLES = ".class {}";


None
== DIAGNOSTICS ==

[]
