optimizer/src/snapshots/spec_example_reg_ctx_name_segments_inlined.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, server$ } from '@qwik.dev/core';
export const Works = component$((props) => {
	const text = 'hola';
	return (
		<div onClick$={server$(() => console.log('in server', text))}></div>
	);
});

============================= test.js ==

import { useLexicalScope } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	const text = "hola";
	return /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ serverQrl(/*#__PURE__*/ inlinedQrl(()=>{
		const [text] = useLexicalScope();
		return console.log("in server", text);
	}, "Works_component_div_on_click_server_I0KQOua02KE", [text])) }, null, null, 3, null);
}, "Works_component_t45qL4vNGv0"));


None
== DIAGNOSTICS ==

[]
