optimizer/src/snapshots/spec_example_server_auth.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import GitHub from '@auth/core/providers/github'
import Facebook from 'next-auth/providers/facebook'
import Google from 'next-auth/providers/google'
import {serverAuth$, auth$} from '@auth/qwik';

export const { onRequest, logout, getSession, signup } = serverAuth$({
	providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
	]
});

export const { onRequest, logout, getSession, signup } = auth$({
	providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
	]
});

============================= test.tsx_auth_GU0aY5QCETY.js (ENTRY POINT)==

import Facebook from "next-auth/providers/facebook";
import GitHub from "@auth/core/providers/github";
import Google from "next-auth/providers/google";
export const auth_GU0aY5QCETY = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };


None
/*
{
  "origin": "test.tsx",
  "name": "auth_GU0aY5QCETY",
  "entry": null,
  "displayName": "test.tsx_auth",
  "hash": "GU0aY5QCETY",
  "canonicalFilename": "test.tsx_auth_GU0aY5QCETY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "auth$",
  "captures": false,
  "loc": [
    642,
    943
  ]
}
*/
============================= test.tsx_serverAuth_qVqpX2a0p9Y.js (ENTRY POINT)==

import Facebook from "next-auth/providers/facebook";
import GitHub from "@auth/core/providers/github";
import Google from "next-auth/providers/google";
export const serverAuth_qVqpX2a0p9Y = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };


None
/*
{
  "origin": "test.tsx",
  "name": "serverAuth_qVqpX2a0p9Y",
  "entry": null,
  "displayName": "test.tsx_serverAuth",
  "hash": "qVqpX2a0p9Y",
  "canonicalFilename": "test.tsx_serverAuth_qVqpX2a0p9Y",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "serverAuth$",
  "captures": false,
  "loc": [
    266,
    575
  ]
}
*/
============================= test.js ==

import { serverAuthQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { authQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { serverAuthQrl } from "@auth/qwik";
import { authQrl } from "@auth/qwik";
const i_qVqpX2a0p9Y = ()=>import("./test.tsx_serverAuth_qVqpX2a0p9Y");
const i_GU0aY5QCETY = ()=>import("./test.tsx_auth_GU0aY5QCETY");
export const { onRequest, logout, getSession, signup } = /*#__PURE__*/ serverAuthQrl(/*#__PURE__*/ qrl(i_qVqpX2a0p9Y, "serverAuth_qVqpX2a0p9Y"));
export const { onRequest, logout, getSession, signup } = /*#__PURE__*/ authQrl(/*#__PURE__*/ qrl(i_GU0aY5QCETY, "auth_GU0aY5QCETY"));


None
== DIAGNOSTICS ==

[]
