optimizer/src/snapshots/spec_example_strip_client_code.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useClientMount$, useStore, useTask$ } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';
import threejs from 'threejs';
import { a } from './keep';
import { b } from '../keep2';
import { c } from '../../remove';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useClientMount$(async () => {
		state.text = await mongo.users();
		redis.set(state.text, a, b, c);
	});

	useTask$(() => {
		// Code
	});

	return (
		<div
			shouldRemove$={() => state.text}
			onClick$={() => console.log('parent', state, threejs)}
		>
			<Div
				onClick$={() => console.log('keep')}
				render$={() => state.text}
			/>
			{state.text}
		</div>
	);
});

============================= components/component.js ==

import redis from "redis";
import mongo from "mongodb";
import { useTaskQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
import { useClientMountQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { c } from "../../remove";
import { b } from "../keep2";
import { a } from "./keep";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useClientMountQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
import threejs from "threejs";
import { a } from "./keep";
import { b } from "../keep2";
import { c } from "../../remove";
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
	const state = useStore({ text: "" });
	// Double count watch
	/*#__PURE__*/ useClientMountQrl(/*#__PURE__*/ inlinedQrl(async ()=>{
		const [state] = useLexicalScope();
		state.text = await mongo.users();
		redis.set(state.text, a, b, c);
	}, "Parent_component_useClientMount_Yn2kIDABoYw", [state]));
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ inlinedQrl(()=>{
		// Code
	}, "Parent_component_useTask_ngmvcygWux8"));
	return /*#__PURE__*/ _jsxSorted("div", {
		shouldRemove$: /*#__PURE__*/ inlinedQrl(()=>{
			const [state] = useLexicalScope();
			return state.text;
		}, "Parent_component_div_shouldRemove_EBj69wTX1do", [state]),
		"on:click": /*#__PURE__*/ inlinedQrl(()=>{
			const [state] = useLexicalScope();
			return console.log("parent", state, threejs);
		}, "Parent_component_div_on_click_qNr5MFLFX9Y", [state])
	}, null, [_jsxSorted(Div, {
		onClick$: /*#__PURE__*/ inlinedQrl(()=>console.log("keep"), "Parent_component_div_Div_on_click_v0R8Xo2OyCo"),
		render$: /*#__PURE__*/ inlinedQrl(()=>{
			const [state] = useLexicalScope();
			return state.text;
		}, "Parent_component_div_Div_render_CkMybN6xzQk", [state])
	}, null, null, 3, null), state.text], 1, null);
}, "Parent_component_t6Wy3C0Q0XM"));


None
== DIAGNOSTICS ==

[]
