optimizer/src/snapshots/spec_example_strip_exports_used.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useResource$ } from '@qwik.dev/core';
import mongodb from 'mongodb';

export const onGet = () => {
	const data = mongodb.collection.whatever;
	return {
		body: {
		data
		}
	}
};

export default component$(()=> {
	useResource$(() => {
		return onGet();
	})
	return <div>cmp</div>
});

============================= test.tsx_test_component_useResource_4a8wVY7wh38.tsx (ENTRY POINT)==

import { onGet } from "./test";
export const test_component_useResource_4a8wVY7wh38 = ()=>{
	return onGet();
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_useResource_4a8wVY7wh38",
  "entry": null,
  "displayName": "test.tsx_test_component_useResource",
  "hash": "4a8wVY7wh38",
  "canonicalFilename": "test.tsx_test_component_useResource_4a8wVY7wh38",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useResource$",
  "captures": false,
  "loc": [
    248,
    276
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.tsx (ENTRY POINT)==

import { useResourceQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = ()=>{
	/*#__PURE__*/ useResourceQrl(/*#__PURE__*/ qrl(i_4a8wVY7wh38, "test_component_useResource_4a8wVY7wh38"));
	return <div>cmp</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    227,
    302
  ]
}
*/
============================= test.tsx ==

import mongodb from "mongodb";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import mongodb from "mongodb";
const i_4a8wVY7wh38 = ()=>import("./test.tsx_test_component_useResource_4a8wVY7wh38");
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export const onGet = ()=>{
	const data = mongodb.collection.whatever;
	return { body: { data } };
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
