optimizer/src/snapshots/spec_example_strip_server_code.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, serverLoader$, serverStuff$, $, client$, useStore, useTask$ } from '@qwik.dev/core';
import { isServer } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';
import { handler } from 'serverless';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		if (!isServer) return;
		state.text = await mongo.users();
		redis.set(state.text);
	});

	serverStuff$(async () => {
		// should be removed too
		const a = $(() => {
			// from $(), should not be removed
		});
		const b = client$(() => {
			// from clien$(), should not be removed
		});
		return [a,b];
	})

	serverLoader$(handler);

	useTask$(() => {
		// Code
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
});

============================= test.tsx_Parent_component_useTask_gDH1EtUWqBU.js (ENTRY POINT)==

import mongo from "mongodb";
import redis from "redis";
import { useLexicalScope } from "@qwik.dev/core";
export const s_gDH1EtUWqBU = async ()=>{
	const [state] = useLexicalScope();
	if (!true) return;
	state.text = await mongo.users();
	redis.set(state.text);
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_gDH1EtUWqBU",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "test.tsx_Parent_component_useTask_gDH1EtUWqBU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    361,
    463
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc.js (ENTRY POINT)==

export const s_2ca3HLDC7yc = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "s_2ca3HLDC7yc",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_a",
  "hash": "2ca3HLDC7yc",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc",
  "path": "",
  "extension": "js",
  "parent": "serverStuff",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    536,
    585
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk.js (ENTRY POINT)==

export const s_v9qawr2Inkk = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "s_v9qawr2Inkk",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_b_client",
  "hash": "v9qawr2Inkk",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk",
  "path": "",
  "extension": "js",
  "parent": "serverStuff",
  "ctxKind": "function",
  "ctxName": "client$",
  "captures": false,
  "loc": [
    608,
    662
  ]
}
*/
============================= test.tsx_Parent_component_serverLoader_k1L0DiPQV1I.js (ENTRY POINT)==

import { handler } from "serverless";
export const s_k1L0DiPQV1I = handler;


None
/*
{
  "origin": "test.tsx",
  "name": "s_k1L0DiPQV1I",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverLoader",
  "hash": "k1L0DiPQV1I",
  "canonicalFilename": "test.tsx_Parent_component_serverLoader_k1L0DiPQV1I",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "serverLoader$",
  "captures": false,
  "loc": [
    701,
    708
  ]
}
*/
============================= test.tsx_Parent_component_0TaiDayHrlo.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
const i_P8oRQhHsurk = ()=>import("./test.tsx_Parent_component_useTask_1_P8oRQhHsurk");
const i_v9qawr2Inkk = ()=>import("./test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk");
const i_2ca3HLDC7yc = ()=>import("./test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc");
export const s_0TaiDayHrlo = ()=>{
	const state = useStore({ text: "" });
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_gDH1EtUWqBU, "s_gDH1EtUWqBU", [state]));
	/*#__PURE__*/ serverStuffQrl(/*#__PURE__*/ qrl(i_r1qAHX7Opp0, "s_r1qAHX7Opp0"));
	/*#__PURE__*/ serverLoaderQrl(/*#__PURE__*/ qrl(i_k1L0DiPQV1I, "s_k1L0DiPQV1I"));
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_P8oRQhHsurk, "s_P8oRQhHsurk"));
	return /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_P8oRQhHsurk, "s_P8oRQhHsurk")) }, null, state.text, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_0TaiDayHrlo",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    277,
    833
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_r1qAHX7Opp0.js (ENTRY POINT)==

import { clientQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_v9qawr2Inkk = ()=>import("./test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk");
const i_2ca3HLDC7yc = ()=>import("./test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc");
export const s_r1qAHX7Opp0 = async ()=>{
	const a = /*#__PURE__*/ qrl(i_2ca3HLDC7yc, "s_2ca3HLDC7yc");
	const b = /*#__PURE__*/ clientQrl(/*#__PURE__*/ qrl(i_v9qawr2Inkk, "s_v9qawr2Inkk"));
	return [a, b];
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_r1qAHX7Opp0",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff",
  "hash": "r1qAHX7Opp0",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_r1qAHX7Opp0",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "serverStuff$",
  "captures": false,
  "loc": [
    481,
    683
  ]
}
*/
============================= test.tsx_Parent_component_useTask_1_P8oRQhHsurk.js (ENTRY POINT)==

export const s_P8oRQhHsurk = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "s_P8oRQhHsurk",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask_1",
  "hash": "P8oRQhHsurk",
  "canonicalFilename": "test.tsx_Parent_component_useTask_1_P8oRQhHsurk",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    722,
    742
  ]
}
*/
============================= test.js ==

import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_gDH1EtUWqBU = ()=>import("./test.tsx_Parent_component_useTask_gDH1EtUWqBU");
const i_r1qAHX7Opp0 = ()=>import("./test.tsx_Parent_component_serverStuff_r1qAHX7Opp0");
const i_k1L0DiPQV1I = ()=>import("./test.tsx_Parent_component_serverLoader_k1L0DiPQV1I");
const i_P8oRQhHsurk = ()=>import("./test.tsx_Parent_component_useTask_1_P8oRQhHsurk");
const i_0TaiDayHrlo = ()=>import("./test.tsx_Parent_component_0TaiDayHrlo");
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_0TaiDayHrlo, "s_0TaiDayHrlo"));


None
== DIAGNOSTICS ==

[]
